--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <figure class="avatar-box">
             <img
               src="./assets/images/myajtar2.jfif"
-              alt="Richard hanrick"
+              alt="Kaisar Hameed"
               width="80"
             />
           </figure>
